--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "countries-list": "^2.6.1",
+    "mdbreact": "^5.0.1",
     "prop-types": "^15.7.2",
     "rc-slider": "^9.7.1",
     "react": "^17.0.1",
